--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4"
   },
